Ready to Deploy

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -106,14 +106,13 @@
 
         <div class = "portfolio">
             <!-- Copy and paste below as needed to add projects -->
-            <a href = "#" class = "portfolio__item">
+            <a href = "https://github.com/agp745/MyGamerList" class = "portfolio__item">
                 <img src = "/img/mgl-img.png" class = "portfolio__img"></a>
 
-               <!-- <a  href = "#"class = "portfolio item"> <img src = "/img/Screenshot 2023-06-02 at 2.45.55 PM.png" class = "portfolio__img"></a> -->
+               <a  href = "#"class = "portfolio__item"> <img src = "/img/Screenshot 2023-06-02 at 2.45.55 PM.png" class = "portfolio__img"></a>
                 
                
                 <!-- insert project image here -->
-            </a>
         </div>
     </section>
 
@@ -124,12 +123,12 @@
         <ul class = "social-list">
 
             <li class = "social-list__item">
-                <a class = "social-list__link"><i class="fa-brands fa-github"></i>
+                <a class = "social-list__link" href = "https://github.com/BLO2210"><i class="fa-brands fa-github"></i>
                 </a>
             </li>
 
             <li class = "social-list__item">
-                <a class = "social-list__link"><i class="fa-brands fa-linkedin"></i>
+                <a class = "social-list__link" href = "https://www.linkedin.com/in/brandon-lopez-19baa3272/"><i class="fa-brands fa-linkedin"></i>
                 </a>
             </li>
 
