--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -109,7 +109,7 @@
             <a href = "https://github.com/agp745/MyGamerList" class = "portfolio__item">
                 <img src = "/img/mgl-img.png" class = "portfolio__img"></a>
 
-               <a  href = "#"class = "portfolio__item"> <img src = "/img/Screenshot 2023-06-02 at 2.45.55 PM.png" class = "portfolio__img"></a>
+               <a  href = "https://github.com/Gazmoji/MusicSocialMediaProject"class = "portfolio__item"> <img src = "/img/Screenshot 2023-06-02 at 2.45.55 PM.png" class = "portfolio__img"></a>
                 
                
                 <!-- insert project image here -->
