--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -106,10 +106,10 @@
 
         <div class = "portfolio">
             <!-- Copy and paste below as needed to add projects -->
-            <a href = "https://github.com/agp745/MyGamerList" class = "portfolio__item">
+            <a href = "https://mygamerlist.onrender.com/" class = "portfolio__item">
                 <img src = "/img/mgl-img.png" class = "portfolio__img"></a>
 
-               <a  href = "https://github.com/Gazmoji/MusicSocialMediaProject"class = "portfolio__item"> <img src = "/img/Screenshot 2023-06-02 at 2.45.55 PM.png" class = "portfolio__img"></a>
+               <a  href = "https://soundproof-demo.onrender.com"class = "portfolio__item"> <img src = "/img/Screenshot 2023-06-02 at 2.45.55 PM.png" class = "portfolio__img"></a>
                 
                
                 <!-- insert project image here -->
